--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,7 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -51,11 +47,20 @@ table {
 	border-spacing: 0;
 }
 
-/*------------------------------------------------------------*/
+/* ------------------------------------------- CSS RESET ------------------------------------------ */
+
+/*
+@import 'https://fonts.googleapis.com/css?family=Lato';
+@import 'https://fonts.googleapis.com/css?family=Oswald';
+*/
+
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
+@import url(https://fonts.googleapis.com/css?family=Oswald);
+
 
 body {
     line-height: 1;
-    font: :16px Lato;
+    font: 16px Lato;
     color: #565656;
 }
 
@@ -99,14 +104,15 @@ header {
     color: #565656;
     text-transform: uppercase;
     text-align: center;
-    border-bottom: 8px solid #cc99ff;
+    border-bottom: 8px solid #019c8c;
+    border-bottom: 8px solid #019c8c;
 }
 
 .sidebar {
     float: left;
     width: 20%;
     height: 100%;
-    background-color: #f2e6ff;
+    background-color: #06c0ab;
     color: white;
     font: 32px Lato;
     font-weight: 100;
@@ -116,10 +122,8 @@ header {
     bottom: 0;
     position: absolute;
 }
-
+    
 .logo {
-    height: auto;
-    width: 100px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -138,6 +142,14 @@ header {
     font-weight: 300;
 }
 
+.single-menu-element-link:hover {
+    font-weight: 900;
+    background-color: #019c8c;
+    height: 40px;
+    line-height: 32px;
+    transition: background 0.7s ease, padding 0.5s linear;
+}
 
-
-
+.single-menu-element {
+    padding: 10px;
+}
